# IncludingTaglib

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/nativetest/: Audiofileproperties.java  JNIInteract.java  ListSongFromStorage.java  MainActivity.java  ShowMeTags.java
app/src/main/res/layout/: listingsongfromstorage.xml  showmetags_layout.xml
gradle/wrapper/: gradle-wrapper.properties
